--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -21,7 +21,8 @@
 
                 <div class="field">
                     <div class="control">
-                        <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                        <input class="input is-large" type="password" name="password" placeholder="Your Password"
+                               minlength="6">
                     </div>
                 </div>
                 <div class="field">
