--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -27,7 +27,7 @@
 
                 <div class="field">
                     <div class="control">
-                        <input class="input is-large" type="password" name="password" placeholder="Password">
+                        <input class="input is-large" type="password" name="password" placeholder="Password" minlength="6">
                     </div>
                 </div>
 
