--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}{% endblock %}-GroceryList</title>
+    <title>{% block title %}{% endblock %}-GroceryReader</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css" />
 </head>
 
@@ -75,7 +75,7 @@
 <footer class="footer">
     <div class="content has-text-centered">
         <p>
-            <strong>GroceryList</strong> for DefHack2020, developed by Code Gang.
+            <strong>GroceryReader</strong> for DefHack2020, developed by Code Gang.
         </p>
     </div>
 </footer>
