--- a/templates/error.html
+++ b/templates/error.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block title %}Error{% endblock %}
 {% block content %}
     <h1 class="title" style="color: #f7595f">Oops, {{ issue }}</h1>
     <h1 class="subtitle">You will be directed back in 3s...</h1>
