--- a/templates/main.html
+++ b/templates/main.html
@@ -10,6 +10,6 @@
     <input class="input is-rounded" type="text" placeholder={{ current_user.calories_daily }}
             value={{ current_user.calories_daily }} maxlength="6" minlength="2" style="width: 8%">
     <a class="button is-primary" href="{{ url_for('upload_img') }}">Change</a><br>
-    <a class="button is-link" href="{{ url_for('profile') }}">Go to profile</a>
+    <a class="button is-link" href="{{ url_for('profile') }}">Testing testin gt esting</a>
 
 {% endblock %}
