--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}-GroceryReader</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.0/css/bulma.min.css" />
+    <style>
+        body {
+            background-color:#D9FFF8;
+        }
+        .top_right_container{
+            /*
+            background-color:#ccc;
+            */
+            width:100%;
+            height:25%;
+            display:flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            /*justify-content: flex-end;*/
+            justify-content: space-between;
+            align-items: flex-end;
+            position:absolute;
+            top:20px;
+        }
+        #options_button{
+            /*
+            Because there is no ancestor with position:relative;
+            it positions the button relative to the screen.
+            Or you could add position:relative; to the "html" element
+            and it would work the same way.
+            */
+            /*
+            position:absolute;
+            top:57px;
+            right:10px;
+            */
+            margin-top: 20px;
+            margin-right: 40px;
+            padding: 10px 15px 10px 15px;
+            font-family: inherit;
+            font-size: 15px;
+            width: 70px;
+            background-color: #DBAD6A;
+            border:none;
+            text-decoration:none;
+        }
+        #options_button:hover{
+            background-color:#8B5D1A;
+        }
+
+    </style>
+
 </head>
 
 <body>
@@ -59,6 +106,12 @@
                             </a>
                         {% endif %}
                     </div>
+{#                    <section class="top_right_container">#}
+{##}
+{#                        <a href="options.php" class="button" id="options_button">#}
+{#                            Options#}
+{#                        </a>#}
+{#                    </section>#}
                 </div>
             </div>
         </nav>
