--- a/templates/main.html
+++ b/templates/main.html
@@ -2,7 +2,7 @@
 {% block title %}Main{% endblock %}
 {% block content %}
     
-    <h1 class="subtitle">Get your dietary feedback hello test</h1>
+    <h1 class="subtitle">Get your dietary feedback</h1>
     <form method=post enctype=multipart/form-data action="{{ url_for('upload_img') }}">
         <input type=file name=file class="button">
         <input type="submit" value="Upload" class="button is-primary">
@@ -10,6 +10,6 @@
     <input class="input is-rounded" type="text" placeholder={{ current_user.calories_daily }}
             value={{ current_user.calories_daily }} maxlength="6" minlength="2" style="width: 8%">
     <a class="button is-primary" href="{{ url_for('upload_img') }}">Change</a><br>
-    <a class="button is-link" href="{{ url_for('profile') }}">Testing testin gt esting</a>
+    <a class="button is-link" href="{{ url_for('profile') }}">Go to profile</a>
 
 {% endblock %}
