--- a/templates/report.html
+++ b/templates/report.html
@@ -1,8 +1,23 @@
 {% extends 'base.html' %}
 {% block title %}Food Report{% endblock %}
 {% block content %}
-    <h1 class="title">Food Name: {{ name }}</h1>
-    <h4 class="subtitle">Calories: {{ cal }} / {{ current_user.get_rec()['cal'] }}</h4>
+
+    return render_template('report.html', cal=json_data['Calories'], totalfat=json_data['TotalFat'],
+    sfat=json_data['SaturatedFat'], tfat=json_data['TransFat'], chole=json_data['Cholesterol'],
+    sodium=json_data['Sodium'], totalcarbo=json_data['TotalCarbohydrate'],
+    dfiber=json_data['DietaryFiber'], sugar=json_data['Sugar'], protein=json_data['Protein'])
+
+    <h2 class="subtitle">Calories: {{ cal }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Sugar: {{ sugar }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Protein: {{ protein }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Sodium: {{ sodium}} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Total Carbohydrate: {{ totalcarbo }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Total Fat: {{ totalfat }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Saturated Fat: {{ sfat }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Trans Fat: {{ tfat }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Cholesterol: {{ chole }} / {{ current_user.get_rec()['cal'] }}</h2>
+    <h2 class="subtitle">Dietary Fiber: {{ dfiber }} / {{ current_user.get_rec()['cal'] }}</h2>
+
 
 
 {% endblock %}
