--- a/templates/main.html
+++ b/templates/main.html
@@ -2,19 +2,28 @@
 {% block title %}Main{% endblock %}
 {% block content %}
     {% if not current_user.is_guided %}
-        <div class="notification is-primary">
+        <div class="notification is-warning">
             Looks like it's your first time coming here. Click <a href="{{ url_for('profile') }}">*here*</a> to get started by giving us your data.
         </div>
     {% endif %}
     
-    <h1 class="subtitle">Get your dietary feedback</h1>
+    <h1 class="title">Get your dietary feedback</h1>
     <form method=post enctype=multipart/form-data action="{{ url_for('upload_img') }}">
-        <input type=file name=file class="button">
-        <input type="submit" value="Upload" class="button is-primary">
+        <div class="file has-name is-primary is-center">
+            <label class="file-label">
+                <input class="file-input" type="file" name="resume">
+                <span class="file-cta">
+                  <span class="file-label">
+                    Choose a file…
+                  </span>
+                </span>
+            </label>
+        </div>
+        <input type="submit" value="Upload" class="button is-link">
     </form><br>
-    <input class="input is-rounded" type="text" placeholder={{ current_user.calories_daily }}
-            value={{ current_user.calories_daily }} maxlength="6" minlength="2" style="width: 8%">
-    <a class="button is-primary" href="{{ url_for('upload_img') }}">Change</a><br>
-    <a class="button is-link" href="{{ url_for('profile') }}">Go to profile</a>
+{#    <input class="input is-rounded" type="text" placeholder={{ current_user.calories_daily }}#}
+{#            value={{ current_user.calories_daily }} maxlength="6" minlength="2" style="width: 8%">#}
+{#    <a class="button is-primary" href="{{ url_for('upload_img') }}">Change</a><br>#}
+{#    <a class="button is-link" href="{{ url_for('profile') }}">Go to profile</a>#}
 
 {% endblock %}
