--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}{{ user.name }}{% endblock %}
+{#{% if not current_user.is_guided %}{% endif %}#}
 
 {#Content are all centered#}
 {% block content %}
