--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3723,7 +3723,7 @@ fieldset[disabled] .select select:hover {
   font-size: 1.5rem;
 }
 
-.file {
+.fil {
   align-items: stretch;
   display: flex;
   justify-content: flex-start;
@@ -4107,13 +4107,16 @@ fieldset[disabled] .select select:hover {
 }
 
 .file-input {
-  height: 100%;
+  height: 50px;
   left: 0;
   opacity: 0;
   outline: none;
-  position: absolute;
+  position: relative;
   top: 0;
   width: 100%;
+  display: table-cell;
+  vertical-align: middle;
+  border: 1px solid red;
 }
 
 .file-cta,
