--- a/templates/main.html
+++ b/templates/main.html
@@ -9,17 +9,7 @@
     
     <h1 class="title">Get your dietary feedback</h1>
     <form method=post enctype=multipart/form-data action="{{ url_for('upload_img') }}">
-
-        <div class="file has-name is-primary is-center">
-            <label class="file-label">
-                <input class="file-input" type="file" name="resume">
-                <span class="file-cta">
-                  <span class="file-label">
-                    Choose a file…
-                  </span>
-                </span>
-            </label>
-        </div>
+        <input class="button is-primary" type="file" name="resume">
         <input type="submit" value="Upload" class="button is-link">
     </form><br>
 {#    <input class="input is-rounded" type="text" placeholder={{ current_user.calories_daily }}#}
