--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,9 +8,9 @@
     <h1 class="title">
         Welcome {{ user.name }}!
     </h1>
-    <a class="button is-info" href="{{ url_for('auth.account_set') }}">Account Setting</a>
+    <a class="button is-info" href="options.php">Options</a>
     <a class="button is-danger" href="{{ url_for('auth.cancel') }}">Cancel my account</a>
-
+    {#                    <section class="top_right_container">#}
 {% endblock %}
 
 {% block body %}
