--- a/templates/main.html
+++ b/templates/main.html
@@ -9,7 +9,7 @@
     
     <h1 class="title">Get your dietary feedback</h1>
     <form method=post enctype=multipart/form-data action="{{ url_for('upload_img') }}">
-        <input class="button is-primary" type="file" name="resume">
+        <input class="button is-primary" type="file" name="file">
         <input type="submit" value="Upload" class="button is-link">
     </form><br>
 {#    <input class="input is-rounded" type="text" placeholder={{ current_user.calories_daily }}#}
