--- a/templates/report.html
+++ b/templates/report.html
@@ -5,6 +5,8 @@
     <h2 class="subtitle">Calories: {{ cal }}</h2>
     <h2 class="subtitle">Sugar: {{ sugar }}</h2>
     <h2 class="subtitle">Sodium: {{ sodium }}</h2>
+    <h2 class="subtitle">Protein: {{ protein }}</h2>
+    <h2 class="subtitle">Dietary Fiber: {{ dfiber }}</h2>
     {% if not 'Total Carbohydrate is too less for you. You got 0.0/Min' in totalcarbo %}
         <h2 class="subtitle">Total Carbohydrate: {{ totalcarbo }}</h2>
     {% endif %}
